[project]
name = "twarc"
version = "2.14.1"
description = "Archive tweets from the command line"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=7,<9",
    "click-config-file>=0.6",
    "click-plugins>=1",
    "humanize>=3.9",
    "python-dateutil>=2.8",
    "requests_oauthlib>=1.3",
    "tqdm>=4.62",
    "twarc-csv>=0.7.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-black>=0.6.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "toml>=0.10.2",
]

[project.scripts]
twarc = "twarc.command:main"
twarc2 = "twarc.command2:twarc2"

[tool.pytest.ini_options]
addopts = "--verbose --black"

[tool.uv.workspace]
members = [
    "tmp/twarc",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
